🔧 Declaring the tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,15 +9,14 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frtti -fexceptions")
 # Add Google Test
 find_package(GTest REQUIRED)
 
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(LIBZIP REQUIRED libzip)
+# find_package(PkgConfig REQUIRED) pkg_check_modules(LIBZIP REQUIRED libzip)
 
 include_directories(${GTEST_INCLUDE_DIRS})
 include_directories(${MLIR_INCLUDE_DIRS})
 
 # Define the common libraries to link
 set(COMMON_LIBRARIES ${CUDAQ_MLIR_RUNTIME_PATH}/libcudaq-mlir-runtime.so
-                     ${GTEST_LIBRARIES} pthread)
+                     ${GTEST_LIBRARIES})
 
 # Test executable
 add_executable(test-mqss-passes testMQSSPasses.cpp)
