🐛 Fixing paths for tblgen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,6 @@ message(STATUS "Using MLIRConfig.cmake in: ${MLIR_DIR}")
 
 # Append MLIR's CMake modules.
 list(APPEND CMAKE_MODULE_PATH "${MLIR_CMAKE_DIR}")
-list(APPEND CMAKE_MODULE_PATH "${MLIR_CMAKE_DIR}")
 list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")
 
@@ -103,8 +102,8 @@ include_directories(
   ${qinfo_INCLUDE_DIRS})
 
 # Set explicit paths
-file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/include/Passes)
-file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/include/Optimizer)
+file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/Passes)
+file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/Optimizer)
 set(LLVM_TARGET_DEFINITIONS
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Passes/Transforms.td)
 # Generate .inc files from TableGen
@@ -119,7 +118,7 @@ mlir_tablegen(include/Passes/Decompositions.h.inc -gen-pass-decls -name
               MQSSOptDecompositions)
 add_public_tablegen_target(MQSSDecompositionsPassIncGen)
 
-include_directories(BEFORE ${CMAKE_BINARY_DIR}/include)
+include_directories(BEFORE ${CMAKE_CURRENT_BINARY_DIR}/include)
 
 # Collect all .cpp files in the src directory
 file(GLOB SRC_CODEGEN "${CMAKE_CURRENT_SOURCE_DIR}/lib/Passes/CodeGen/*.cpp")
