--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -1087,7 +1087,7 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which Doxygen is
 # run.
 
-EXCLUDE                = ../src/private
+EXCLUDE                = ../src/private ../include/Passes/BaseMQSSPass.hpp
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
