--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,6 +174,7 @@ add_mlir_library(
   MQT::CoreNA
   MQT::QMapSC
   MQT::QMapSCHeuristic
+  MLIRTensorDialect
   MLIRIR
   MLIRPass
   MLIRTransforms)
